2008-06-05  Vincent Untz  <vuntz@gnome.org>

	* configure.in: updated for gnome-panel/libpanel-util/

2008-06-03  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.4.

==================== 2.23.3 ====================

2008-06-03  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.23.3

2008-05-14  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.3.

==================== 2.23.2.1 ====================

2008-05-14  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.23.2.1

2008-05-14  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.3.

==================== 2.23.2 ====================

2008-05-14  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.23.2

2008-04-21  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.2.

==================== 2.23.1 ====================

2008-04-21  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.23.1

2008-04-15  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.22.2.

==================== 2.22.1.3 ====================

2008-04-15  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.22.1.3

2008-04-10  Lucas Rocha  <lucasr@gnome.org>

	* gnome-panel/gnome-panel.desktop.in.in: added three new 
	keys (X-GNOME-Autostart-Phase, X-GNOME-Provides, and
	X-GNOME-Autostart-Notify) which are needed to make gnome-panel 
	work nicely with new gnome-session. Fixes bug #525052.

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.22.2.

==================== 2.22.1.2 ====================

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.22.1.2

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* configure.in: add gio check for CLOCK_MECHANISM, because of the use
	of system-timezone.c
