@@ -20,7 +20,7 @@ AC_SUBST(LIB_PANEL_APPLET_LT_VERSION)
 AM_MAINTAINER_MODE
 GNOME_MAINTAINER_MODE_DEFINES
 
-IT_PROG_INTLTOOL([0.35.0])
+IT_PROG_INTLTOOL([0.40.0])
 
 AC_ISC_POSIX
 AC_PROG_CC
